--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
-    "react-resizable-panels": "^2.1.3",
     "sonner": "^1.5.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
@@ -162,7 +161,7 @@
     "web-llm": "^0.2.28",
     "yup": "^1.4.0",
     "zod": "^3.23.8",
-    "zustand": "^4.4.7"
+    "zustand": "^4.4.7",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.2",
