--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nextjs",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,96 +10,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
-    "@next/swc-wasm-nodejs": "13.5.1",
-    "@radix-ui/react-alert-dialog": "^1.1.1",
-    "@radix-ui/react-aspect-ratio": "^1.1.0",
-    "@radix-ui/react-avatar": "^1.1.0",
-    "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-collapsible": "^1.1.0",
-    "@radix-ui/react-context-menu": "^2.2.1",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-hover-card": "^1.1.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-menubar": "^1.1.1",
-    "@radix-ui/react-navigation-menu": "^1.2.0",
-    "@radix-ui/react-popover": "^1.1.1",
-    "@radix-ui/react-progress": "^1.1.0",
-    "@radix-ui/react-radio-group": "^1.2.0",
-    "@radix-ui/react-scroll-area": "^1.1.0",
-    "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slider": "^1.2.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.1",
-    "@radix-ui/react-toggle": "^1.1.0",
-    "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.2",
-    "@types/react-dom": "18.2.7",
-    "@xenova/transformers": "^2.17.2",
-    "autoprefixer": "10.4.15",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
-    "date-fns": "^3.6.0",
-    "embla-carousel-react": "^8.3.0",
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.5.1",
-    "express": "^5.1.0",
-    "input-otp": "^1.2.4",
-    "lucide-react": "^0.446.0",
-    "next": "13.5.1",
-    "next-themes": "^0.3.0",
-    "node-fetch": "^3.3.2",
-    "node-loader": "^2.1.0",
-    "postcss": "8.4.30",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.53.0",
-    "sonner": "^1.5.0",
-    "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.9",
-    "@hookform/resolvers": "^3.9.0",
     "@auth/prisma-adapter": "^1.0.12",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^3.9.0",
     "@huggingface/transformers": "^2.17.2",
     "@langchain/community": "^0.0.38",
     "@langchain/core": "^0.1.48",
     "@mlc-ai/web-llm": "^0.2.28",
     "@monaco-editor/react": "^4.6.0",
+    "@next/swc-wasm-nodejs": "13.5.1",
     "@paystack/inline-js": "^2.0.0",
     "@prisma/client": "^5.8.1",
-    "@stripe/stripe-js": "^2.4.0",
-    "@supabase/auth-helpers-nextjs": "^0.8.7",
-    "@supabase/auth-helpers-react": "^0.4.2",
-    "@supabase/auth-ui-react": "^0.4.6",
-    "@supabase/auth-ui-shared": "^0.1.8",
-    "@supabase/supabase-js": "^2.39.3",
-    "@tanstack/react-query": "^5.17.19",
-    "@tensorflow/tfjs": "^4.15.0",
-    "@tensorflow/tfjs-node": "^4.15.0",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/nodemailer": "^6.4.14",
-    "@uiw/react-codemirror": "^4.21.21",
-    "@xenova/transformers": "^2.14.0",
-    "bcryptjs": "^2.4.3",
-    "chart.js": "^4.4.1",
-    "codemirror": "^6.0.1",
-    "date-fns": "^3.6.0",
-    "flutterwave-node-v3": "^1.1.10",
-    "framer-motion": "^10.18.0",
-    "jsonwebtoken": "^9.0.2",
-    "langchain": "^0.1.25",
-    "moment": "^2.30.1",
-    "@next/swc-wasm-nodejs": "13.5.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -127,33 +52,61 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@stripe/stripe-js": "^2.4.0",
+    "@supabase/auth-helpers-nextjs": "^0.8.7",
+    "@supabase/auth-helpers-react": "^0.4.2",
+    "@supabase/auth-ui-react": "^0.4.6",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.39.3",
+    "@tanstack/react-query": "^5.17.19",
+    "@tensorflow/tfjs": "^4.15.0",
+    "@tensorflow/tfjs-node": "^4.15.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/nodemailer": "^6.4.14",
     "@types/react-dom": "18.2.7",
+    "@uiw/react-codemirror": "^4.21.21",
+    "@xenova/transformers": "^2.14.0",
     "autoprefixer": "10.4.15",
+    "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "codemirror": "^6.0.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "express": "^5.1.0",
+    "flutterwave-node-v3": "^1.1.10",
+    "framer-motion": "^10.18.0",
     "input-otp": "^1.2.4",
+    "jsonwebtoken": "^9.0.2",
+    "langchain": "^0.1.25",
     "lucide-react": "^0.446.0",
+    "moment": "^2.30.1",
     "next": "13.5.1",
     "next-auth": "^4.24.5",
+    "next-themes": "^0.3.0",
+    "node-fetch": "^3.3.2",
+    "node-loader": "^2.1.0",
     "nodemailer": "^6.9.8",
     "ollama-js": "^0.5.0",
-    "prisma": "^5.8.1",
-    "next-themes": "^0.3.0",
     "postcss": "8.4.30",
+    "prisma": "^5.8.1",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.25.0",
+    "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.1",
     "react-monaco-editor": "^0.54.0",
     "react-query": "^3.39.3",
+    "react-resizable-panels": "^2.1.3",
     "react-select": "^5.8.0",
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^9.1.3",
@@ -162,16 +115,16 @@
     "remark-gfm": "^4.0.0",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
+    "sonner": "^1.5.0",
     "stripe": "^14.15.0",
-    "web-llm": "^0.2.28",
-    "yup": "^1.4.0",
-    "zod": "^3.23.8",
-    "zustand": "^4.4.7",
-    "react-resizable-panels": "^2.1.3",
-    "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.9",
+    "web-llm": "^0.2.28",
+    "yup": "^1.4.0",
+    "zod": "^3.23.8",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "24.0.10",
